Correct scoring points and add VM options
Updated gameplay scoring system and instructions.