@@ -1,6 +1,18 @@
-Title screen - there is two options play and leaderboard 
+When a attempting to run please MAKE SURE TO USE THESE VM OPTIONS:
+--module-path
+"YOUR-JAVAFX-PATH-HERE"
+--add-modules
+javafx.controls,javafx.fxml,javafx.media
 
-Click play -
+
+Title screen - there is two options play and leaderboard 
+<img width="613" height="433" alt="Screenshot 2026-05-05 002106" src="https://github.com/user-attachments/assets/6944396a-1a25-4df4-9fab-6ddf36c4d723" />
+
+
+Click Song Select ->
+
+<img width="597" height="430" alt="Screenshot 2026-05-05 002125" src="https://github.com/user-attachments/assets/6e21f7a1-51a6-475d-8807-e8269e8754f5" />
+
 
 Choose Your Song - These are the current song options that we have 
 
@@ -8,6 +20,7 @@ Ability to return to title screen option
 
 
 Gameplay screen -
+<img width="596" height="434" alt="Screenshot 2026-05-05 002158" src="https://github.com/user-attachments/assets/78046a8e-a53b-491c-b153-77875e103002" />
 
 Song will play with notes dropping to corresponding section 
 
@@ -17,11 +30,13 @@ Notes will fall down from the top of the screen to the bottom
 
 Users will have to click the corresponding key to the notes 
 
-Each note is equal 10 points 
+Each note is equal 100 points 
 
 Points will be added to the total point pull as seen 
 
 As user gets notes in a row the combo will go up but when user misses combo will go back down to zero
+
+<img width="175" height="79" alt="Screenshot 2026-05-05 002225" src="https://github.com/user-attachments/assets/47771d72-b43b-4bc5-9284-ef84015e52b2" />
 
 Game over -
 
@@ -29,6 +44,12 @@ Lets user add user name in an arcade style while showing final score
 
 Then it will take you back to title screen
 
+<img width="600" height="427" alt="Screenshot 2026-05-05 002243" src="https://github.com/user-attachments/assets/27293e22-b401-443a-aebf-b4ede4a8db28" />
+
+
 Title screen  to leaderboard
 
 Leaderboard - opens with all users that have played with their high scores
+
+<img width="605" height="429" alt="Screenshot 2026-05-05 002307" src="https://github.com/user-attachments/assets/32509ebf-8027-474b-bb16-f8caa0fef0e7" />
+
